feat: frontend now consumes score endpoint

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/index_style.css">
     <title>COMPQUEST</title>
+    <link rel="stylesheet" type="text/css" href="css/index_style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="window-container">
+<body>
+    <div class="background-animation"></div>
     <div class="game-window">
         <header class="menu-header">
             <h1>COMPQUEST</h1>
-            <hr class="header-hr">
-            <h2>Quiz Battle Multiplayer</h2>
+            <p>UMA BATALHA DE QUIZ SOBRE COMPUTABILIDADE E COMPLEXIDADE</p>
         </header>
 
         <form id="lobby-form">
-            <label for="player-name">APELIDO</label>
-            <input type="text" id="player-name" required>
-            <button type="button" id="start-session">Iniciar Sessão</button>
-            <button type="button" id="find-session">Entrar Sessão</button>
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" id="player-name" placeholder="Digite seu apelido" required>
+            </div>
+            <button type="button" id="start-session" class="primary-btn">
+                <i class="fas fa-plus-circle"></i> Criar Sessão
+            </button>
+            <button type="button" id="find-session" class="secondary-btn">
+                <i class="fas fa-search"></i> Entrar em uma Sessão
+            </button>
             <div id="connection-status"></div>
         </form>
 
         <div id="game-area" style="display:none;">
-            <h3 id="question-text"></h3>
-            <div id="options"></div>
-            <div id="answer-buttons"></div>
-            <p id="status"></p>
+            <div id="question-header">
+                <h3 id="question-text"></h3>
+                <p id="status"></p>
+            </div>
+            <div id="options-container">
+                <div id="options"></div>
+                <div id="answer-buttons"></div>
+            </div>
         </div>
     </div>
-     <script src="js/index_scripts.js"></script>
+    <script src="js/index_scripts.js"></script>
 </body>
+
 </html>
